--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ aliyun-python-sdk-alimt = "^1.0"
 environs = "^7.1"
 beautifulsoup4 = "^4.8"
 fire = "^0.2.1"
+cached_property = "^1.5"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.4"
